--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
         name: Docker Metadata action
         uses: docker/metadata-action@v3.3.0
         with:
-          images: upshift/nut-upsd
+          images: martijndierckx/nut-upsd
           flavor: |
             latest=${{ github.ref == 'refs/heads/master' }}
           tags: |
